implemented issues #10, #20
